--- a/index.html
+++ b/index.html
@@ -614,19 +614,21 @@
                                     </div>
 
                                     {/* API KEY */}
+                                    {aiEnabled && (
                                     <div>
-                                        <label className="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-2 block ml-1">
+                                       {/* <label className="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-2 block ml-1">
                                             Gemini API Key
-                                        </label>
+                                        </label>*/}
                                         <input
                                             type="password"
                                             id="key_field"
                                             defaultValue={apiKey}
-                                            placeholder="Inserisci chiave..."
+                                            placeholder="Gemini API Key..."
                                             className="w-full bg-slate-50 border-2 border-slate-100 rounded-2xl px-5 py-4 text-sm font-bold focus:border-blue-500 outline-none"
                                         />
                                     </div>
-
+                                    )}
+                                    
                                     {/* Mostra Ricette (solo se IA attiva) */}
                                     {aiEnabled && (
                                       <div className="flex items-center justify-between p-4 bg-slate-50 rounded-2xl border border-slate-100">
