--- a/index.html
+++ b/index.html
@@ -631,6 +631,26 @@
                                                     {item.name}
                                                 </span>
 
+                                                {/* NUOVO: pulsante per “dimenticare” il reparto memorizzato */}
+                                                <button
+                                                  onClick={(e) => {
+                                                    e.stopPropagation();
+                                                    const norm = item.name.toLowerCase();
+                                                    setCategoryMap(prev => {
+                                                      const copy = { ...prev };
+                                                      delete copy[norm];
+                                                      return copy;
+                                                    });
+                                                  }}
+                                                  className="text-slate-200 hover:text-slate-500 p-1 mr-1"
+                                                  title="Dimentica reparto"
+                                                >
+                                                  <svg viewBox="0 0 24 24" width="14" height="14" fill="none" stroke="currentColor" strokeWidth="2">
+                                                    <path d="M3 17l6-10a2 2 0 0 1 3.4 0l6 10a2 2 0 0 1-1.7 3H4.7A2 2 0 0 1 3 17z"/>
+                                                    <line x1="9" y1="13" x2="15" y2="13"/>
+                                                  </svg>
+                                                </button>
+                                                
                                                 <button
                                                     onClick={(e) => {
                                                         e.stopPropagation();
