--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
                                         </label>
                                         <button
                                           type="button"
-                                          onClick={() => { window.location.href = 'apiKey.html'; }}
+                                          onClick={() => { window.location.href = 'apikey.html'; }}
                                           className="has-tooltip text-[10px] font-black uppercase tracking-widest text-blue-500 hover:text-blue-600 flex items-center gap-1"
                                         >
                                           <span>Info</span>
