--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                     }
                   );
                 
-                  const data = await response.json();
+                  //const data = await response.json();
+                    console.log('Gemini RAW response:', data);
                 
                   // se arriva un errore dalla API (es. API key non valida)
                   if (data.error) {
