--- a/index.html
+++ b/index.html
@@ -268,7 +268,10 @@
                         contents: [{ parts: [{ text: `Input: "${query}"` }] }],
                         systemInstruction: {
                           parts: [{
-                            text: `Restituisci SOLO JSON: {"add": [{"n": "prodotto", "c": "CATEGORIA"}], "remove": ["nome"], "recipe": {"title": "Titolo", "query": "ricerca", "platform": "youtube"}}. CATEGORIE: Frutta e Verdura, Macelleria, Pescheria, Latticini, Surgelati, Forno, Dispensa, Bevande, Detersivi, Igiene, Altro.`
+                            text: `Restituisci SOLO JSON: {
+                              "add": [{"n": "nome", "q": "quantità (es. 500g, 2pz)", "c": "CATEGORIA"}],
+                              "recipe": {"title": "Titolo Ricetta", "query": "cosa cercare", "platform": "youtube"}
+                            }. CATEGORIE: Frutta e Verdura, Macelleria, Pescheria, Latticini, Surgelati, Forno, Dispensa, Bevande, Detersivi, Igiene, Altro.`                        
                           }]
                         },
                         generationConfig: {
@@ -612,12 +615,8 @@
                                                     )}
                                                 </div>
 
-                                                <span
-                                                    className={`flex-1 text-sm font-bold ${
-                                                        item.bought ? 'line-through text-slate-300 italic' : 'text-slate-700'
-                                                    }`}
-                                                >
-                                                    {item.name}
+                                                <span className={`flex-1 text-sm font-bold ${item.bought ? 'line-through text-slate-300' : 'text-slate-700'}`}>
+                                                    {item.name} {item.q && <span className="text-blue-500 ml-1 opacity-70">({item.q})</span>}
                                                 </span>
 
                                                 {/* NUOVO: pulsante per “dimenticare” il reparto memorizzato */}
@@ -671,6 +670,26 @@
                             </div>
                         ))}
                     </div>
+
+                    {/* Aggiunta del 25/01/26 */}
+                    {showSocial && recipes.length > 0 && (
+                            <div className="mt-8 mb-4">
+                                <h3 className="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-3 px-1">Ricette Suggerite</h3>
+                                <div className="flex gap-4 overflow-x-auto pb-4 scrollbar-hide">
+                                    {recipes.map(recipe => (
+                                        <a key={recipe.id} 
+                                           href={`https://www.youtube.com/results?search_query=${recipe.query}`} 
+                                           target="_blank"
+                                           className="min-w-[200px] bg-white p-3 rounded-2xl shadow-sm border border-slate-100">
+                                            <div className="aspect-video bg-slate-100 rounded-xl mb-2 flex items-center justify-center">
+                                                <svg viewBox="0 0 24 24" width="24" height="24" fill="#ff0000"><path d="M23.5 12.4c-.2-2.8-.5-5.6-.5-5.6s-.3-2.3-1.3-3.3c-1.3-1.3-2.7-1.3-3.4-1.4C13.4 2 12 2 12 2s-1.4 0-6.3.1c-.7.1-2.1.1-3.4 1.4-1 1-1.3 3.3-1.3 3.3s-.3 2.8-.5 5.6v2.3c.2 2.8.5 5.6.5 5.6s.3 2.3 1.3 3.3c1.3 1.3 2.7 1.3 3.4 1.4 4.9.1 6.3.1 6.3.1s1.4 0 6.3-.1c.7-.1 2.1-.1 3.4-1.4 1-1 1.3-3.3 1.3-3.3s.3-2.8.5-5.6v-2.3zM9.5 15.5V8.5l6.5 3.5-6.5 3.5z"/></svg>
+                                            </div>
+                                            <p className="text-xs font-bold text-slate-800 leading-tight">{recipe.title}</p>
+                                        </a>
+                                    ))}
+                                </div>
+                            </div>
+                        )}
 
                     {/* Barra input in basso */}
                     <div className="fixed bottom-0 left-0 right-0 p-4 pb-8 bg-gradient-to-t from-slate-100 via-slate-100/90 to-transparent">
