--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ const processWithAI = async (input) => {
           "add": [{"n": "nome", "q": "quantità", "c": "CATEGORIA"}],
           "recipes": [{"title": "Titolo", "query": "ricerca youtube", "full_text": "procedimento...", "platform": "youtube"}]
         }
-        CATEGORIE: Frutta e Verdura, Macelleria, Pescheria, Latticini, Surgelati, Forno, Dispensa, Bevande, Detersivi, Igiene, Altro.`;
+        CATEGORIE: Frutta e Verdura, Freschi Frigo, Macelleria e Gastronomia, Pescheria, Forno & Panificati, Dispensa & Scatolame, Bevande, Prodotti Casa, Altro.`;
 
         const response = await fetch(
             `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`,
