--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             const recognitionRef = useRef(null);
 
             const CATEGORY_OPTIONS = [
-                "Frutta e Verdura", "Gastronomia", "Macelleria", "Pescheria", "Latticini",
-                "Surgelati", "Forno", "Dispensa", "Bevande",
-                "Detersivi", "Igiene", "Altro"
+                "Frutta e Verdura", "Freschi Frigo"," Macelleria e Gastronomia", 
+                "Pescheria", "Forno e Panificati", "Dispensa & Scatolame", 
+                "Bevande", "Casa e Igiene", "Altro"
             ];
 
             const [categoryMap, setCategoryMap] = useState(() => {
@@ -257,7 +257,7 @@ const processWithAI = async (input) => {
           "add": [{"n": "nome", "q": "quantità", "c": "CATEGORIA"}],
           "recipes": [{"title": "Titolo", "query": "ricerca youtube", "full_text": "procedimento...", "platform": "youtube"}]
         }
-        CATEGORIE: Frutta e Verdura, Freschi Frigo, Macelleria e Gastronomia, Pescheria, Forno & Panificati, Dispensa & Scatolame, Bevande, Prodotti Casa, Altro.`;
+        CATEGORIE: Frutta e Verdura, Freschi Frigo, Macelleria e Gastronomia, Pescheria, Forno e Panificati, Dispensa & Scatolame, Bevande, Prodotti Casa, Altro.`;
 
         const response = await fetch(
             `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`,
