--- a/index_old.html
+++ b/index_old.html
@@ -100,9 +100,9 @@
             const recognitionRef = useRef(null);
 
             const CATEGORY_OPTIONS = [
-                "Frutta e Verdura", "Gastronomia", "Macelleria", "Pescheria", "Latticini",
-                "Surgelati", "Forno", "Dispensa", "Bevande",
-                "Detersivi", "Igiene", "Altro"
+                "Frutta/Verdura", "Frigorifero"," Macelleria","Gastronomia", 
+                "Pescheria", "Forno/Panificati", "Dispensa", 
+                "Bevande", "Casa/Igiene", "Surgelati" , "Altro" 
             ];
 
             const [categoryMap, setCategoryMap] = useState(() => {
@@ -119,6 +119,7 @@
             };
             
             const onDropCategory = (e, targetCat) => {
+                
               const idStr = e.dataTransfer.getData('text/plain');
               if (!idStr) return;
               const id = Number(idStr);
@@ -256,7 +257,7 @@ const processWithAI = async (input) => {
           "add": [{"n": "nome", "q": "quantità", "c": "CATEGORIA"}],
           "recipes": [{"title": "Titolo", "query": "ricerca youtube", "full_text": "procedimento...", "platform": "youtube"}]
         }
-        CATEGORIE: Frutta e Verdura, Macelleria, Pescheria, Latticini, Surgelati, Forno, Dispensa, Bevande, Detersivi, Igiene, Altro.`;
+        CATEGORIE: Frutta/Verdura, Frigorifero, Macelleria, Gastronomia, Pescheria, Forno/Panificati, Dispensa, Bevande, Casa/Igiene, Surgelati, Altro.`;
 
         const response = await fetch(
             `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`,
@@ -566,7 +567,7 @@ const processWithAI = async (input) => {
                                             <div
                                                 key={item.id}
                                                 className="flex items-center p-3.5"
-                                                draggable
+                                                draggable="true"
                                                 onDragStart={(e) => onDragStartItem(e, item.id)}
                                                 onClick={(e) => {
                                                           // evita che il click dopo il drop dia fastidio
