--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@ const processWithAI = async (input) => {
                                     "{pendingCategoryItems[currentPendingIndex]}"
                                 </p>
                             <div className="grid grid-cols-2 gap-2 mb-6 max-h-60 overflow-y-auto pr-1">
-                              {CATEGORY_OPTIONS.map(cat => (
+                              {categoryOptions.map(cat => (
                                 <button
                                   key={cat}
                                   onClick={() => addPendingItemWithCategory(cat)}
