--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@ const processWithAI = async (input) => {
             </div>
 
             <div className="flex-1 overflow-y-auto pr-2 space-y-3 scrollbar-hide">
-                {/*   {categoryOptions.map(cat => (
+                   {categoryOptions.map(cat => (
                     <div key={cat} className="flex items-center gap-3 bg-slate-50 p-3 rounded-2xl border border-slate-100">
                         <input 
                             type="text"
@@ -1126,15 +1126,8 @@ const processWithAI = async (input) => {
                             </button>
                         )}
                     </div>
-                ))}  */}
-                {sortedCategories.map(cat => (
-                      <div
-                        key={cat}
-                        className="p-3 bg-slate-50 rounded-xl border border-slate-200 mb-2 flex items-center justify-between"
-                      >
-                        <span className="text-sm font-medium">{cat}</span>
-                      </div>
-                    ))}
+                ))}  
+          
 
             </div>
 
