--- a/help.html
+++ b/help.html
@@ -93,12 +93,23 @@
       gap: 1.4rem;  /* più distanza verticale su telefono */
     }
 
-    @media (min-width: 720px) {
-      .grid {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-      }
-    }
+    /* Sopra i 720px torna alla griglia a 2 colonne */
+@media (min-width: 720px) {
+  .grid {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 1rem; /* come preferisci su desktop */
+  }
+}
 
+    /* Migliora distanza verticale e alternanza SOLO su mobile */
+@media (max-width: 719px) {
+  .grid > .card,
+  .grid > .card.light {
+    margin-bottom: 0.3rem;          /* ulteriore stacco tra card */
+    padding-top: 1.35rem;
+    padding-bottom: 1.35rem;
+  }
+}
     .card {
       background: linear-gradient(145deg, #0f172a, #020617);
       border-radius: var(--radius-xl);
