--- a/index_old.html
+++ b/index_old.html
@@ -1162,7 +1162,7 @@ const processWithAI = async (input) => {
             );
         };
 
-   //     const root = ReactDOM.createRoot(document.getElementById('root'));
+       const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
 </body>
