--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,7 @@ const processWithAI = async (input) => {
             );
         };
 
-        const root = ReactDOM.createRoot(document.getElementById('root'));
+     //   const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
 </body>
