--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
     <script type="text/babel">
         const { useState, useEffect, useRef, useMemo } = React;
 
-        const [showDeleteCatModal, setShowDeleteCatModal] = useState(false);
-        const [catToDelete, setCatToDelete] = useState(null);
-        
+         
         const App = () => {
+
+            const [showDeleteCatModal, setShowDeleteCatModal] = useState(false);
+            const [catToDelete, setCatToDelete] = useState(null);
+   
             const faviconHref =
               document.querySelector('link[rel="icon"], link[rel="shortcut icon"]')?.href || '';
 
@@ -1296,7 +1298,7 @@ const processWithAI = async (input) => {
             );
         };
 
-     //   const root = ReactDOM.createRoot(document.getElementById('root'));
+        const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
 </body>
