Aggiunta immagine splash

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef Spesa</title>
     
-    <link rel="icon" type="image/png" href="SpesaSmart.png?v=1">
+    <link rel="icon" type="image/png" href="ChefSpesa.png?v=3">
     <link rel="apple-touch-icon" href="ChefSpesa.png?v=3">
 
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
